# NfoForge

./: .gitignore  .prettierrc  404.html  CHANGELOG.md  README.md  SERIES_IMPLEMENTATION_ROADMAP.md  build.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  start_ui.py
.github/workflows/: deploy-docs.yml
audio_codec_utils/: get_audio_codecs.py  get_unique_codecs.py
docs/: build.bat  conf.py  index.md  index.rst  introduction.rst  useful_links.txt
docs/snippets/: bbb_mediainfo.txt  finding-nemo-example-1080p_mediainfo.txt  successful_release.txt
docs/snippets/generated_templates/: file_tokens.md  nfo_tokens.md
docs/stylesheets/: extra.css
docs/templates/: introduction.rst
docs/view/: initial-setup.md  install.md  using-the-wizard.md
docs/view/getting-started/: initial-setup.md  install.md  using-the-wizard.md
docs/view/token-replacer/: advanced.md  flat.md  introduction.md  multi-line.md  prompt-tokens.md  tokens.md
docs_scripts/: generate_token_tables.py
misc_scripts/: dump_mi_data_json.py  dump_mi_data_xml.py
plugins/jinja2_plugin_example/plugin_example/: __init__.py  example.py
resources/bdinfo/American_Gangster/: bdinfo.txt  mi_00106.clpi.xml  mi_00106.m2ts.xml
resources/bdinfo/CHRISTMAS_WITH_THE_KRANKS/: bdinfo.txt  mi_00005.clpi.xml  mi_00005.m2ts.xml  mi_00006.clpi.xml  mi_00006.m2ts.xml
resources/bdinfo/RICK_AND_MORTY_S01/: bdinfo.txt  mi_00044.clpi.xml  mi_00044.m2ts.xml
resources/bdinfo/Resident_Evil_Afterlife_Deluxe_Edition_4K_Ultra_HD/: bdinfo.txt  mi_00001.clpi.xml  mi_00001.m2ts.xml
runtime/config/audio_conventions/: default.json
runtime/config/defaults/: default_config.toml  default_program_conf.toml
search/: search_index.js  search_index.json
snippets/: bbb_pymediainfo.txt  successful_release.txt
snippets/generated_templates/: file_tokens.html  nfo_tokens.html
snippets/generated_templates/file_tokens/: index.html
snippets/generated_templates/nfo_tokens/: index.html
src/: version.py
src/backend/: images.py  main_window.py  media_input.py  media_search.py  process.py  rename_encode.py  template_selector.py  token_replacer.py  tokens.py
src/backend/image_host_uploading/: base_image_host.py  chevereto_v3.py  chevereto_v4.py  img_box.py  img_downloader.py  img_uploader.py  imgbb.py  ptpimg.py
src/backend/torrent_clients/: deluge.py  qbittorrent.py  rtorrent.py  transmission.py
src/backend/torrents/: __init__.py  torrent.py  torrent_pieces.py
src/backend/trackers/: __init__.py  aither.py  beyondhd.py  darkpeers.py  huno.py  lst.py  morethantv.py  onlyencodes.py  passthepopcorn.py  reelflix.py  shareisland.py  torrentleech.py  unit3d_base.py  uploadcx.py  utils.py
src/backend/utils/: audio_channels.py  audio_codecs.py  crop_detect.py  example_parsed_file_data.py  example_parsed_movie_data.py  example_parsed_series_data.py  file_utilities.py  filter_title.py  get_os_executable_ext.py  image_optimizer.py  images.py  language.py  media_info_utils.py  rename_normalizations.py  resolution.py  script_parser.py  super_sub.py  token_utils.py  video_codecs.py  working_dir.py
src/config/: config.py  dependencies.py
src/context/: processing_context.py
src/enums/: __init__.py  audio_channels.py  audio_formats.py  cropping.py  dependencies.py  image_host.py  image_plugin.py  indexer.py  logging_settings.py  media_mode.py  media_type.py  profile.py  rename.py  screen_shot_mode.py  settings_window.py  subtitles.py  theme.py  tmdb_genres.py  tmdb_languages.py  token_replacer.py  torrent_client.py  tracker_selection.py  trackers.py  tvdb_season_type.py  upload_process.py  url_type.py  wizard.py
src/enums/trackers/: aither.py  beyondhd.py  darkpeers.py  huno.py  lst.py  morethantv.py  onlyencodes.py  passthepopcorn.py  reelflix.py  shareisland.py  torrentleech.py  uploadcx.py
src/exceptions/: __init__.py  utils.py
src/frontend/: global_signals.py
src/frontend/custom_widgets/: basic_code_editor.py  client_listbox.py  color_selection_shape.py  (+33 more)
src/logger/: nfo_forge_logger.py
src/nf_jinja2/: __init__.py
src/payloads/: clients.py  config.py  media_inputs.py  media_search.py  script.py  shared_data.py  tracker_search_result.py  trackers.py  watch_folder.py
src/plugins/: loader.py  plugin_payload.py  plugin_prompt_dialog.py  plugin_wizard_base.py
stylesheets/: extra.css
typings/pymediainfo/: __init__.pyi
view/getting-started/: initial-setup.html  install.html  using-the-wizard.html
view/token-replacer/: advanced.html  flat.html  introduction.html  multi-line.html  prompt-tokens.html  tokens.html
(+58 files in other folders)
