[project]
name = "NfoForge"
version = "0.7.4"
description = "NFO generator and upload assistant"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pymediainfo>=7.0.1",
    "tomlkit>=0.13.2",
    "guessit>=3.8.0",
    "autoqpf>=0.2.4",
    "lxml>=5.3.1",
    "iso639-lang>=2.6.0",
    "unidecode>=1.3.8",
    "shortuuid>=1.0.13",
    "cinemagoer>=2023.5.1",
    "torf>=4.2.7",
    "pillow>=11.1.0",
    "platformdirs>=4.3.8",
    "pyside6==6.8.3",
    "psutil>=7.0.0",
    "pyimgbox>=1.0.7",
    "aiohttp>=3.11.18",
    "semver>=3.0.4",
    "pyotp>=2.9.0",
    "qbittorrent-api>=2025.2.0",
    "bencode-py>=4.0.0",
    "transmission-rpc>=7.0.11",
    "deluge-web-client>=1.0.4",
    "niquests>=3.14.1",
    "regex>=2024.11.6",
    "stdlib-list>=0.11.1",
    "jinja2>=3.1.5",
    "beautifulsoup4>=4.13.3",
    "tvdb-v4-official>=1.1.0",
    "rapidfuzz>=3.12.1",
    "oslex2>=0.1.5",
    "qtawesome>=1.4.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.9.6", "cython>=3.0.12"]
build = ["pyinstaller-hooks-contrib>=2025.1", "pyinstaller>=6.9.0"]
docs = ["sphinx==8.1.3", "furo==2024.8.6"]
docs_dev = ["rstcheck[sphinx]>=6.2.4"]

[tool.ruff]
line-length = 88

[tool.basedpyright]
include = ["src", "plugins"]
# ignore = [""]
typeCheckingMode = "standard" # "off", "basic", "standard", "strict", "recommended" or "all"
