[project]
name = "NfoForge"
version = "0.8.9"
description = "NFO generator and upload assistant"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pymediainfo>=7.0.1",
    "tomlkit>=0.13.3",
    "guessit>=3.8.0",
    "autoqpf>=0.2.4",
    "lxml>=5.3.1",
    "iso639-lang>=2.6.3",
    "unidecode>=1.4.0",
    "shortuuid>=1.0.13",
    "imdbinfo>=0.6.4",
    "torf>=4.3.0",
    "pillow>=12.0.0",
    "platformdirs>=4.5.1",
    "pyside6==6.10.1",
    "psutil>=7.2.0",
    "pyimgbox>=1.0.7",
    "aiohttp>=3.13.2",
    "semver>=3.0.4",
    "pyotp>=2.9.0",
    "qbittorrent-api>=2025.11.1",
    "bencode-py>=4.0.0",
    "transmission-rpc>=7.0.11",
    "deluge-web-client>=1.0.7", # TODO: add support for >=2.0.3
    "niquests>=3.16.1",
    "regex>=2025.11.3",
    "stdlib-list>=0.12.0",
    "jinja2>=3.1.6",
    "beautifulsoup4>=4.13.4",
    "tvdb-v4-official>=1.1.0",
    "rapidfuzz>=3.14.3",
    "oslex2>=1.0.0",
    "qtawesome>=1.4.0",
    "urllib3>=2.6.2",
]

[project.optional-dependencies]
dev = ["ruff>=0.9.6", "cython>=3.0.12", "pytest", "pytest-cov", "setuptools", "debugpy"]
build = ["pyinstaller-hooks-contrib>=2025.1", "pyinstaller>=6.9.0"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.6.11", "pymdown-extensions"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]

[tool.basedpyright]
include = ["src", "plugins"]
# ignore = [""]
typeCheckingMode = "standard" # "off", "basic", "standard", "strict", "recommended" or "all"
